--- a/index.html
+++ b/index.html
@@ -6281,13 +6281,17 @@ var $elm$core$List$filter = F2(
 			_List_Nil,
 			list);
 	});
+var $elm$core$String$toLower = _String_toLower;
 var $author$project$Main$filter = F2(
 	function (query, lst) {
 		return A2(
 			$elm$core$List$filter,
 			function (_v0) {
 				var kw = _v0.a;
-				return A2($elm$core$String$contains, query, kw.name);
+				return A2(
+					$elm$core$String$contains,
+					$elm$core$String$toLower(query),
+					$elm$core$String$toLower(kw.name));
 			},
 			lst);
 	});
