--- a/index.html
+++ b/index.html
@@ -5432,6 +5432,12 @@ var $author$project$Main$entry = function () {
 										$elm$json$Json$Decode$succeed($author$project$Main$Research))))))))));
 }();
 var $author$project$Main$decodeResearch = $elm$json$Json$Decode$list($author$project$Main$entry);
+var $author$project$Main$KeywordSet = function (a) {
+	return {$: 'KeywordSet', a: a};
+};
+var $elm$core$Dict$RBEmpty_elm_builtin = {$: 'RBEmpty_elm_builtin'};
+var $elm$core$Dict$empty = $elm$core$Dict$RBEmpty_elm_builtin;
+var $author$project$Main$emptyKeywordSet = $author$project$Main$KeywordSet($elm$core$Dict$empty);
 var $elm$json$Json$Decode$decodeString = _Json_runOnString;
 var $elm$http$Http$BadStatus_ = F2(
 	function (a, b) {
@@ -5452,8 +5458,6 @@ var $elm$http$Http$Sending = function (a) {
 	return {$: 'Sending', a: a};
 };
 var $elm$http$Http$Timeout_ = {$: 'Timeout_'};
-var $elm$core$Dict$RBEmpty_elm_builtin = {$: 'RBEmpty_elm_builtin'};
-var $elm$core$Dict$empty = $elm$core$Dict$RBEmpty_elm_builtin;
 var $elm$core$Maybe$isJust = function (maybe) {
 	if (maybe.$ === 'Just') {
 		return true;
@@ -6221,7 +6225,7 @@ var $elm$http$Http$get = function (r) {
 };
 var $author$project$Main$init = function (_v0) {
 	return _Utils_Tuple2(
-		{query: '', research: _List_Nil},
+		{keywordSet: $author$project$Main$emptyKeywordSet, query: '', research: _List_Nil},
 		$elm$http$Http$get(
 			{
 				expect: A2($elm$http$Http$expectJson, $author$project$Main$GotResearch, $author$project$Main$decodeResearch),
@@ -6233,42 +6237,158 @@ var $elm$core$Platform$Sub$none = $elm$core$Platform$Sub$batch(_List_Nil);
 var $author$project$Main$subscriptions = function (_v0) {
 	return $elm$core$Platform$Sub$none;
 };
+var $author$project$Main$Keyword = function (a) {
+	return {$: 'Keyword', a: a};
+};
+var $author$project$Main$Hide = {$: 'Hide'};
+var $author$project$Main$newKey = function (str) {
+	return $author$project$Main$Keyword(
+		{display: $author$project$Main$Hide, name: str, refs: _List_Nil});
+};
+var $author$project$Main$use = F2(
+	function (research, _v0) {
+		var kw = _v0.a;
+		return $author$project$Main$Keyword(
+			_Utils_update(
+				kw,
+				{
+					refs: A2($elm$core$List$cons, research, kw.refs)
+				}));
+	});
+var $author$project$Main$insert = F3(
+	function (research, k, _v0) {
+		var dict = _v0.a;
+		var result = A2($elm$core$Dict$get, k, dict);
+		if (result.$ === 'Just') {
+			var kw = result.a.a;
+			return $author$project$Main$KeywordSet(
+				A3(
+					$elm$core$Dict$insert,
+					kw.name,
+					A2(
+						$author$project$Main$use,
+						research,
+						$author$project$Main$Keyword(kw)),
+					dict));
+		} else {
+			return $author$project$Main$KeywordSet(
+				A3(
+					$elm$core$Dict$insert,
+					k,
+					$author$project$Main$newKey(k),
+					dict));
+		}
+	});
+var $author$project$Main$keywords = function (researchlist) {
+	return A3(
+		$elm$core$List$foldr,
+		F2(
+			function (research, acc) {
+				return A3(
+					$elm$core$List$foldr,
+					$author$project$Main$insert(research),
+					acc,
+					research.keywords);
+			}),
+		$author$project$Main$emptyKeywordSet,
+		researchlist);
+};
 var $elm$core$Debug$log = _Debug_log;
 var $elm$core$Platform$Cmd$batch = _Platform_batch;
 var $elm$core$Platform$Cmd$none = $elm$core$Platform$Cmd$batch(_List_Nil);
+var $elm$core$Maybe$map = F2(
+	function (f, maybe) {
+		if (maybe.$ === 'Just') {
+			var value = maybe.a;
+			return $elm$core$Maybe$Just(
+				f(value));
+		} else {
+			return $elm$core$Maybe$Nothing;
+		}
+	});
+var $author$project$Main$Show = {$: 'Show'};
+var $author$project$Main$toggle = function (_v0) {
+	var k = _v0.a;
+	return $author$project$Main$Keyword(
+		_Utils_update(
+			k,
+			{
+				display: function () {
+					var _v1 = k.display;
+					if (_v1.$ === 'Show') {
+						return $author$project$Main$Hide;
+					} else {
+						return $author$project$Main$Show;
+					}
+				}()
+			}));
+};
+var $author$project$Main$showInSet = F2(
+	function (key, _v0) {
+		var set = _v0.a;
+		return $author$project$Main$KeywordSet(
+			A3(
+				$elm$core$Dict$update,
+				key,
+				$elm$core$Maybe$map($author$project$Main$toggle),
+				set));
+	});
 var $author$project$Main$update = F2(
 	function (msg, model) {
-		if (msg.$ === 'GotResearch') {
-			var result = msg.a;
-			if (result.$ === 'Ok') {
-				var lst = result.a;
+		switch (msg.$) {
+			case 'GotResearch':
+				var result = msg.a;
+				if (result.$ === 'Ok') {
+					var lst = result.a;
+					return _Utils_Tuple2(
+						_Utils_update(
+							model,
+							{
+								keywordSet: $author$project$Main$keywords(lst),
+								research: lst
+							}),
+						$elm$core$Platform$Cmd$none);
+				} else {
+					var err = result.a;
+					var _v2 = A2($elm$core$Debug$log, 'whoops, error: ', err);
+					return _Utils_Tuple2(
+						_Utils_update(
+							model,
+							{research: _List_Nil}),
+						$elm$core$Platform$Cmd$none);
+				}
+			case 'ChangedQuery':
+				var q = msg.a;
 				return _Utils_Tuple2(
 					_Utils_update(
 						model,
-						{research: lst}),
+						{query: q}),
 					$elm$core$Platform$Cmd$none);
-			} else {
-				var err = result.a;
-				var _v2 = A2($elm$core$Debug$log, 'whoops, error: ', err);
+			default:
+				var k = msg.a;
+				var newKeywords = A2($author$project$Main$showInSet, k, model.keywordSet);
 				return _Utils_Tuple2(
 					_Utils_update(
 						model,
-						{research: _List_Nil}),
+						{keywordSet: newKeywords}),
 					$elm$core$Platform$Cmd$none);
-			}
-		} else {
-			var q = msg.a;
-			return _Utils_Tuple2(
-				_Utils_update(
-					model,
-					{query: q}),
-				$elm$core$Platform$Cmd$none);
 		}
 	});
 var $author$project$Main$ChangedQuery = function (a) {
 	return {$: 'ChangedQuery', a: a};
 };
-var $elm$html$Html$a = _VirtualDom_node('a');
+var $author$project$Main$ClickedKeyword = function (a) {
+	return {$: 'ClickedKeyword', a: a};
+};
+var $elm$json$Json$Encode$bool = _Json_wrap;
+var $elm$html$Html$Attributes$boolProperty = F2(
+	function (key, bool) {
+		return A2(
+			_VirtualDom_property,
+			key,
+			$elm$json$Json$Encode$bool(bool));
+	});
+var $elm$html$Html$Attributes$checked = $elm$html$Html$Attributes$boolProperty('checked');
 var $elm$html$Html$div = _VirtualDom_node('div');
 var $elm$core$List$filter = F2(
 	function (isGood, list) {
@@ -6310,67 +6430,30 @@ var $elm$html$Html$Attributes$href = function (url) {
 		'href',
 		_VirtualDom_noJavaScriptUri(url));
 };
+var $elm$virtual_dom$VirtualDom$style = _VirtualDom_style;
+var $elm$html$Html$Attributes$style = $elm$virtual_dom$VirtualDom$style;
+var $author$project$Main$inlineStyle = _List_fromArray(
+	[
+		A2($elm$html$Html$Attributes$style, 'display', 'inline-block'),
+		A2($elm$html$Html$Attributes$style, 'padding', '1em')
+	]);
 var $elm$html$Html$input = _VirtualDom_node('input');
-var $author$project$Main$KeywordSet = function (a) {
-	return {$: 'KeywordSet', a: a};
+var $elm$virtual_dom$VirtualDom$Normal = function (a) {
+	return {$: 'Normal', a: a};
 };
-var $author$project$Main$emptyKeywordSet = $author$project$Main$KeywordSet($elm$core$Dict$empty);
-var $author$project$Main$Keyword = function (a) {
-	return {$: 'Keyword', a: a};
-};
-var $author$project$Main$newKey = function (str) {
-	return $author$project$Main$Keyword(
-		{count: 1, name: str});
-};
-var $author$project$Main$use = function (_v0) {
-	var kw = _v0.a;
-	return $author$project$Main$Keyword(
-		_Utils_update(
-			kw,
-			{count: kw.count + 1}));
-};
-var $author$project$Main$insert = F2(
-	function (k, _v0) {
-		var dict = _v0.a;
-		var result = A2($elm$core$Dict$get, k, dict);
-		if (result.$ === 'Just') {
-			var kw = result.a.a;
-			return $author$project$Main$KeywordSet(
-				A3(
-					$elm$core$Dict$insert,
-					kw.name,
-					$author$project$Main$use(
-						$author$project$Main$Keyword(kw)),
-					dict));
-		} else {
-			return $author$project$Main$KeywordSet(
-				A3(
-					$elm$core$Dict$insert,
-					k,
-					$author$project$Main$newKey(k),
-					dict));
-		}
+var $elm$virtual_dom$VirtualDom$on = _VirtualDom_on;
+var $elm$html$Html$Events$on = F2(
+	function (event, decoder) {
+		return A2(
+			$elm$virtual_dom$VirtualDom$on,
+			event,
+			$elm$virtual_dom$VirtualDom$Normal(decoder));
 	});
-var $author$project$Main$toList = function (_v0) {
-	var kwSet = _v0.a;
+var $elm$html$Html$Events$onClick = function (msg) {
 	return A2(
-		$elm$core$List$map,
-		function (_v1) {
-			var keyword = _v1.b;
-			return keyword;
-		},
-		$elm$core$Dict$toList(kwSet));
-};
-var $author$project$Main$keywords = function (researchlist) {
-	return $author$project$Main$toList(
-		A3(
-			$elm$core$List$foldr,
-			F2(
-				function (research, acc) {
-					return A3($elm$core$List$foldr, $author$project$Main$insert, acc, research.keywords);
-				}),
-			$author$project$Main$emptyKeywordSet,
-			researchlist));
+		$elm$html$Html$Events$on,
+		'click',
+		$elm$json$Json$Decode$succeed(msg));
 };
 var $elm$html$Html$Events$alwaysStop = function (x) {
 	return _Utils_Tuple2(x, true);
@@ -6378,7 +6461,6 @@ var $elm$html$Html$Events$alwaysStop = function (x) {
 var $elm$virtual_dom$VirtualDom$MayStopPropagation = function (a) {
 	return {$: 'MayStopPropagation', a: a};
 };
-var $elm$virtual_dom$VirtualDom$on = _VirtualDom_on;
 var $elm$html$Html$Events$stopPropagationOn = F2(
 	function (event, decoder) {
 		return A2(
@@ -6417,14 +6499,24 @@ var $author$project$Main$searchLink = function (term) {
 	return A3($elm$core$String$replace, ' ', '%20', 'https://www.researchcatalogue.net/portal/search-result?fulltext=&title=&autocomplete=&keyword=' + (term + '&portal=&statusprogress=0&statuspublished=0&includelimited=0&includeprivate=0&type_research=research&resulttype=research&format=html&limit=25&page=0'));
 };
 var $elm$html$Html$span = _VirtualDom_node('span');
-var $elm$virtual_dom$VirtualDom$style = _VirtualDom_style;
-var $elm$html$Html$Attributes$style = $elm$virtual_dom$VirtualDom$style;
 var $elm$virtual_dom$VirtualDom$text = _VirtualDom_text;
 var $elm$html$Html$text = $elm$virtual_dom$VirtualDom$text;
+var $author$project$Main$toList = function (_v0) {
+	var kwSet = _v0.a;
+	return A2(
+		$elm$core$List$map,
+		function (_v1) {
+			var keyword = _v1.b;
+			return keyword;
+		},
+		$elm$core$Dict$toList(kwSet));
+};
+var $elm$html$Html$Attributes$type_ = $elm$html$Html$Attributes$stringProperty('type');
 var $elm$html$Html$Attributes$value = $elm$html$Html$Attributes$stringProperty('value');
 var $author$project$Main$view = function (_v0) {
 	var research = _v0.research;
 	var query = _v0.query;
+	var keywordSet = _v0.keywordSet;
 	var viewTitle = function (r) {
 		return A2(
 			$elm$html$Html$p,
@@ -6434,9 +6526,56 @@ var $author$project$Main$view = function (_v0) {
 					$elm$html$Html$text(r.title)
 				]));
 	};
-	var viewKeyword = function (_v1) {
-		var kw = _v1.a;
-		var pixels = (kw.count > 12) ? 20 : (12 + kw.count);
+	var viewKeyword = function (_v3) {
+		var kw = _v3.a;
+		var refs = A3(
+			$elm$core$List$foldr,
+			F2(
+				function (r, acc) {
+					return _Utils_ap(r.keywords, acc);
+				}),
+			_List_Nil,
+			kw.refs);
+		var viewedRefs = function () {
+			var _v2 = kw.display;
+			if (_v2.$ === 'Hide') {
+				return _List_Nil;
+			} else {
+				return _List_fromArray(
+					[
+						A2(
+						$elm$html$Html$p,
+						_List_Nil,
+						A2(
+							$elm$core$List$map,
+							function (ref) {
+								return A2(
+									$elm$html$Html$span,
+									_Utils_ap(
+										$author$project$Main$inlineStyle,
+										_List_fromArray(
+											[
+												$elm$html$Html$Events$onClick(
+												$author$project$Main$ClickedKeyword(ref))
+											])),
+									_List_fromArray(
+										[
+											$elm$html$Html$text(ref)
+										]));
+							},
+							refs))
+					]);
+			}
+		}();
+		var count = $elm$core$List$length(kw.refs);
+		var pixels = function () {
+			var _v1 = kw.display;
+			if (_v1.$ === 'Hide') {
+				return (count > 12) ? 20 : (12 + count);
+			} else {
+				return 40;
+			}
+		}();
 		return A2(
 			$elm$html$Html$span,
 			_List_fromArray(
@@ -6446,36 +6585,48 @@ var $author$project$Main$view = function (_v0) {
 					'font-size',
 					$elm$core$String$fromInt(pixels) + 'px')
 				]),
-			_List_fromArray(
-				[
-					A2(
-					$elm$html$Html$a,
-					_List_fromArray(
-						[
+			_Utils_ap(
+				_List_fromArray(
+					[
+						A2(
+						$elm$html$Html$span,
+						A2(
+							$elm$core$List$cons,
 							$elm$html$Html$Attributes$href(
-							$author$project$Main$searchLink(kw.name)),
-							A2($elm$html$Html$Attributes$style, 'display', 'inline-block'),
-							A2($elm$html$Html$Attributes$style, 'padding', '1em')
-						]),
-					_List_fromArray(
-						[
-							$elm$html$Html$text(kw.name)
-						])),
-					A2(
-					$elm$html$Html$span,
-					_List_Nil,
-					_List_fromArray(
-						[
-							$elm$html$Html$text(
-							$elm$core$String$fromInt(kw.count))
-						]))
-				]));
+								$author$project$Main$searchLink(kw.name)),
+							$author$project$Main$inlineStyle),
+						_List_fromArray(
+							[
+								$elm$html$Html$text(kw.name)
+							])),
+						A2(
+						$elm$html$Html$span,
+						_List_Nil,
+						_List_fromArray(
+							[
+								$elm$html$Html$text(
+								$elm$core$String$fromInt(
+									$elm$core$List$length(kw.refs)))
+							])),
+						A2(
+						$elm$html$Html$input,
+						_List_fromArray(
+							[
+								$elm$html$Html$Attributes$type_('checkbox'),
+								$elm$html$Html$Attributes$checked(
+								_Utils_eq(kw.display, $author$project$Main$Show)),
+								$elm$html$Html$Events$onClick(
+								$author$project$Main$ClickedKeyword(kw.name))
+							]),
+						_List_Nil)
+					]),
+				viewedRefs));
 	};
 	var researchLst = research;
 	var keywordLst = A2(
 		$author$project$Main$filter,
 		query,
-		$author$project$Main$keywords(researchLst));
+		$author$project$Main$toList(keywordSet));
 	var keywordCount = 'there are: ' + ($elm$core$String$fromInt(
 		$elm$core$List$length(keywordLst)) + ' keywords.');
 	return A2(
