--- a/index.html
+++ b/index.html
@@ -6392,7 +6392,7 @@ var $author$project$Main$init = function (_v0) {
 		$elm$http$Http$get(
 			{
 				expect: A2($elm$http$Http$expectJson, $author$project$Main$GotResearch, $author$project$Main$decodeResearch),
-				url: 'research.json'
+				url: 'internal_research.json'
 			}));
 };
 var $elm$core$Platform$Sub$batch = _Platform_batch;
@@ -7695,7 +7695,7 @@ var $author$project$Main$view = function (_v0) {
 	};
 	var viewKeyword = function (_v1) {
 		var kw = _v1.a;
-		var pixels = (kw.count > 12) ? 20 : (12 + kw.count);
+		var pixels = (kw.count > 12) ? (12 + kw.count) : (12 + kw.count);
 		return A2(
 			$elm$html$Html$span,
 			_List_fromArray(
