Adjust build script

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			margin: 0;
 		}
 	</style>
-	<script type="text/javascript" src="build/elm.js"></script>
+	<script type="text/javascript" src="build/main.js"></script>
 </head>
 
 <body>
