--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
         #elm {
             width : 100%;
         }
+
+        a:hover {
+            text-decoration-color:rgba(0,0,0,0);
+            text-decoration:none !important;
+            animation-duration: 0.6 ;
+        }
+
+        a {
+            text-decoration-color:rgb(0,0,0);
+            text-decoration:underline !important;
+        }
+
+        
     </style>
 </head>
 <body>
