Added a visual overview of RC

--- a/index_rc.html
+++ b/index_rc.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 <div id="container-main">
-    <!-- <div id="header">
+    <div id="header">
         <a id="menuicon-pages">
             <svg class="menu-icon" onclick="openMenu($('#page-menu-list'))" viewBox="0 0 16 16">
                 <rect x="1" y="3" fill="#333" width="14" height="2"></rect>
@@ -82,7 +82,7 @@
                     </div>
                             </div>
         </div>
-    </div> -->
+    </div>
     <pre id="elm"></pre>
 
 
@@ -97,7 +97,7 @@
 		}
 	</script>
 
-    <!-- <div id="footer">
+    <div id="footer">
         <footer>
             <div id="footer-content">
                 <div id="footer-content-lists">
@@ -179,7 +179,7 @@
                 </p>
             </div>
         </footer>
-    </div> -->
+    </div>
 </div>
 
 
