--- a/index.html
+++ b/index.html
@@ -23,19 +23,9 @@
             width: 100%;
         }
 
-        /*
-        a:hover {
-            text-decoration-color:rgba(0,0,0,0);
-            text-decoration:none !important;
-            animation-duration: 0.6 ;
-        }
 
-        a {
-            text-decoration-color:rgb(0,0,0);
-            text-decoration:underline !important;
-        }
-        */
-        /* html {
+        
+        html {
             --lazy-image-width: 100%;
             --lazy-image-height: 100%;;
         }
@@ -43,7 +33,7 @@
         lazy-image {
             width: var(--lazy-image-width);
             height: var(--lazy-image-height);
-        } */
+        } 
     </style>
 </head>
 
