--- a/index.html
+++ b/index.html
@@ -24,14 +24,23 @@
         }
         
         html {
-            --lazy-image-width: 100%;
-            --lazy-image-height: 100%;;
+           
+        }
+
+        .cover {
+            --lazy-image-fit: cover;
+            --lazy-image-fade-duration: 0.3s;
+            --lazy-image-fade-easing: ease-in-out;
         }
 
         lazy-image {
-            width: var(--lazy-image-width);
-            height: var(--lazy-image-height);
+            width: 100%;
+            height: 100%;
+            --lazy-image-fade-duration: 0.3s;
+            --lazy-image-fade-easing: ease-in-out;
         } 
+
+  
     </style>
 </head>
 
