before adding scaling

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         }
 
         .cover {
-            --lazy-image-fit: cover;
+            /* --lazy-image-fit: cover; */
             --lazy-image-fade-duration: 0.3s;
-            --lazy-image-fade-easing: ease-in-out;
+            --lazy-image-fade-easing: ease;
         }
 
         lazy-image {
             width: 100%;
             height: 100%;
             --lazy-image-fade-duration: 0.3s;
-            --lazy-image-fade-easing: ease-in-out;
+            --lazy-image-fade-easing: ease;
         } 
 
   
