--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             height: 100%;
             --lazy-image-fade-duration: 0.3s;
             --lazy-image-fade-easing: ease;
+            --lazy-image-fit: cover;
         } 
 
   
