--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Research Catalogue - an international database for artistic research</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="rc_front_page_files/548ffb3bbb9446da1d700dc22f2aa82f.css">
+    <!-- <link rel="stylesheet" type="text/css" href="rc_front_page_files/548ffb3bbb9446da1d700dc22f2aa82f.css"> -->
     <script src="rc_front_page_files/jquery-new.min.js"></script>
     <script type="text/javascript">
         jQueryNew = $.noConflict(false);
@@ -39,7 +39,10 @@
             --lazy-image-fade-duration: 0.3s;
             --lazy-image-fade-easing: ease;
             --lazy-image-fit: cover;
+            font-size:8px;
         } 
+
+
 
   
     </style>
