Wired the worker up in index.html

--- a/index.html
+++ b/index.html
@@ -111,6 +111,26 @@
             if (document.getElementById("elm")) {
                 document.getElementById("elm").innerText = 'This is a headless program, meaning there is nothing to show here.\\n\\nI started the program anyway though, and you can access it as `app` in the developer console.';
             }
+
+            const worker = new Worker('worker.js')
+
+            const app = Elm.Main.init({
+                node: document.getElementById('app')
+            });
+
+            // listen for keyword queries form the main app:
+            app.ports.sendQuery.subscribe(function(query) {
+                worker.postMessage(query);
+            });
+
+            // send the result from the worker to the main app:
+            worker.onmessage = function(event) {
+                app.ports.receiveResults.send(event.data);
+            };
+
+            
+
+    
         </script>
 
         <!-- <div id="footer">
