--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             let w = window.innerWidth;
             let h = window.innerHeight;
 
-            console.log("w & h :", [w, h]);
+            // console.log("w & h :", [w, h]);
             
             const worker = new Worker('build/worker.js')
             var app = Elm.Main.init({ node: document.getElementById("elm"), flags: { width: w, height: h } });
