--- a/index.html
+++ b/index.html
@@ -116,13 +116,17 @@
 
             // listen for keyword queries form the main app:
             app.ports.sendQuery.subscribe(function(query) {
-                console.log("query", query);
+                // console.log("query", query);
                 worker.postMessage(query);
             });
 
+            app.ports.problem.subscribe(function(problem) {
+                console.log("there is a problem: ", problem);
+            });
+            
             // send the result from the worker to the main app:
             worker.onmessage = function(event) {
-                console.log("results", event.data);
+                // console.log("results", event.data);
                 app.ports.receiveResults.send(event.data);
             };
 
