let's try and see if we can have fuzzy search

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         jQueryNew = $.noConflict(false);
     </script>
-    <script async type="module" src="/node_modules/@power-elements/lazy-image/lazy-image.js"></script>
+    <!-- <script async type="module" src="/node_modules/@power-elements/lazy-image/lazy-image.js"></script> -->
 
     <script type="text/javascript" src="rc_front_page_files/4b06ba9da5e559e1261abd478b3939fd.js"></script>
     <script type="text/javascript" src="build/main.js"></script>
@@ -25,10 +25,10 @@
 
         html {}
 
-        .cover {
-            /* --lazy-image-fit: cover; */
-            --lazy-image-fade-duration: 0.3s;
-            --lazy-image-fade-easing: ease;
+        /* .cover {
+            --lazy-image-fit: cover;
+        --lazy-image-fade-duration: 0.3s;
+        --lazy-image-fade-easing: ease;
         }
 
         lazy-image {
@@ -39,6 +39,7 @@
             font-size: 8px;
         }
 
+        */
         a:focus {
             border: solid 1px blue;
         }
