--- a/index.html
+++ b/index.html
@@ -23,23 +23,6 @@
             width: 100%;
         }
 
-        html {}
-
-        /* .cover {
-            --lazy-image-fit: cover;
-        --lazy-image-fade-duration: 0.3s;
-        --lazy-image-fade-easing: ease;
-        }
-
-        lazy-image {
-            width: 100%;
-            height: 100%;
-            --lazy-image-fade-duration: 0.3s;
-            --lazy-image-fade-easing: ease;
-            font-size: 8px;
-        }
-
-        */
         a:focus {
             border: solid 1px blue;
         }
@@ -48,56 +31,8 @@
 
 <body>
     <div id="container-main">
-        <!-- <div id="header">
-        <a id="menuicon-pages">
-            <svg class="menu-icon" onclick="openMenu($('#page-menu-list'))" viewBox="0 0 16 16">
-                <rect x="1" y="3" fill="#333" width="14" height="2"></rect>
-                <rect x="1" y="7" fill="#333" width="14" height="2"></rect>
-                <rect x="1" y="11" fill="#333" width="14" height="2"></rect>
-            </svg>
-        </a>
-        <div class="page-menu styly-menu left-aligned" id="page-menu-list">
-            <ul>
-                <li><a href="https://www.researchcatalogue.net/">Home</a></li>
-                <li><a href="https://www.researchcatalogue.net/portal/institutions">Institutional Portals</a></li>
-                <li><a href="https://www.researchcatalogue.net/portal/journals">Journals</a></li>
-                <li><a href="https://www.researchcatalogue.net/portal/projects">Projects</a></li>
-                <li><a href="https://www.researchcatalogue.net/portal/researchers?publicObjects=1">Researchers</a></li>
-            </ul>
-        </div>
-        <h1 id="header-title">
-            <a href="https://www.researchcatalogue.net/">Research Catalogue</a>
-                    </h1>
-        <div style="float: right;" class="hide-on-mobile">
-            <a href="https://www.researchcatalogue.net/portal/about" class="about-links">About</a>
-            <a href="https://guide.researchcatalogue.net/" class="about-links">Help</a>
-        </div>
-        <h2 id="header-description" class="hide-on-mobile">
-            an international database for artistic research
-        </h2>
-        <div id="header-search">
-            <form action="/portal/search-result" method="get">
-                <input id="header-search-input" data-autocomplete="1" class="ui-autocomplete-input" autocomplete="nope" data-autocomplete-options="{&quot;url&quot;:&quot;/portal/search&quot;,&quot;property&quot;:&quot;title&quot;}" placeholder="Search" name="fulltext" type="input">
-            </form>
-            <a id="header-search-advanced" href="https://www.researchcatalogue.net/portal/advanced-search" onclick="advancedSearchDialog('');return false">advanced search            </a>
-        </div>
-        <div class="desktop-menu">
-            <div id="main-tabs">
-                <a class="main-tab" href="https://www.researchcatalogue.net/">Home</a>
-                <a class="main-tab" href="https://www.researchcatalogue.net/portal/institutions">Institutional Portals</a>
-                <a class="main-tab" href="https://www.researchcatalogue.net/portal/journals">Journals</a>
-                <a class="main-tab" href="https://www.researchcatalogue.net/portal/projects">Projects</a>
-                <a class="main-tab" href="https://www.researchcatalogue.net/portal/researchers?publicObjects=1">Researchers</a>
-                                                    <div class="login-section">
-                        <a href="https://www.researchcatalogue.net/portal/login" class="button">login</a>
-                        <a href="https://www.researchcatalogue.net/portal/register" class="button">register</a>
-                    </div>
-                            </div>
-        </div>
-    </div> -->
         <pre id="elm"></pre>
-
-
+        <img src="/cgi-bin/update_counter.cgi" style="display:none;" alt="">
         <script>
             let element = document.getElementById("elm");
 
